Fixed donation form on mobile

--- a/src/assets/css/campaign.css
+++ b/src/assets/css/campaign.css
@@ -268,6 +268,9 @@
     padding: 0px 10px;
     cursor: pointer;
 }
+.active-campaign-nav{
+    border-bottom: 4px solid white;
+}
 @media only screen and (max-width:600px) {
     .campaign-title{
         font-size: 14px;
