--- a/src/assets/css/search-results.css
+++ b/src/assets/css/search-results.css
@@ -83,7 +83,7 @@
     padding: 0px 30px;
 }
 .result-active{
-    border-bottom: 4px solid magenta;
+    border-bottom: 4px solid #a16ce6;
 }
 
 /* explore */
